# private-pass

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  package.json  rust-toolchain.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/api/: Dockerfile  requirements.txt  run.py
apps/api/app/: config.py  crypto.py  deps.py  errors.py  main.py  pqc.py  sdjwt.py  utils.py  zkp.py
apps/api/app/models/: schemas.py
apps/api/app/routes/: api_keys.py  audit.py  batch.py  dynamic_qr.py  encrypted.py  ephemeral.py  health.py  keys.py  links.py  nfc.py  pqc.py  qr.py  registry.py  revoke.py  templates.py  tokens.py  urls.py  verify.py  webhooks.py  zkp.py
apps/api/tests/: conftest.py  test_batch.py  test_dynamic_qr.py  test_encrypted.py  test_links.py  test_nfc.py  test_nfc_uid.py  test_pqc.py  test_privacy.py  test_qr.py  test_templates.py  test_tokens.py  test_verify.py
apps/docs/: package.json
apps/docs/src/app/: globals.css  layout.tsx  page.tsx
apps/docs/src/app/analytics/: page.tsx
apps/docs/src/app/api/: page.tsx
apps/docs/src/app/cli/: page.tsx
apps/docs/src/app/encrypted/: page.tsx
apps/docs/src/app/ephemeral/: page.tsx
apps/docs/src/app/installation/: page.tsx
apps/docs/src/app/introduction/: page.tsx
apps/docs/src/app/quickstart/: page.tsx
apps/docs/src/app/registry/: page.tsx
apps/docs/src/app/sd-jwt/: page.tsx
apps/docs/src/app/sdk/: page.tsx
apps/docs/src/app/security/: page.tsx
apps/docs/src/app/zkp/: page.tsx
apps/docs/src/components/: sidebar.tsx
apps/web/: package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/api-keys/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/encrypted/: page.tsx
apps/web/src/app/ephemeral/: page.tsx
apps/web/src/app/links/: page.tsx
apps/web/src/app/nfc/: page.tsx
apps/web/src/app/qr/: page.tsx
apps/web/src/app/registry/: page.tsx
apps/web/src/app/sd-jwt/: page.tsx
apps/web/src/lib/: api.ts  utils.ts
cli/: package.json
cli/src/: index.ts
cli/src/commands/: config.ts  decode.ts  encrypt.ts  ephemeral.ts  key.ts  link.ts  nfc.ts  qr.ts  registry.ts  sign.ts  token.ts  verify.ts  zk-proof.ts
cli/src/lib/: api.ts  utils.ts
crates/veilpass-cli/: Cargo.toml
crates/veilpass-cli/src/: main.rs
crates/veilpass-core/: Cargo.toml
crates/veilpass-core/benches/: qr_generation.rs  signing.rs
crates/veilpass-core/src/: lib.rs
crates/veilpass-core/src/crypto/: keygen.rs  mod.rs  secure_mem.rs
crates/veilpass-core/src/links/: claim.rs  mod.rs  signed_url.rs
crates/veilpass-core/src/nfc/: mod.rs
crates/veilpass-core/src/qr/: mod.rs
crates/veilpass-core/src/signing/: ed25519.rs  hmac.rs  mod.rs  types.rs
crates/veilpass-core/src/tokens/: bearer.rs  expiry.rs  mod.rs  totp_like.rs
crates/veilpass-core/tests/: crypto_vectors.rs  nfc_roundtrip.rs  qr_roundtrip.rs  token_validation.rs
crates/veilpass-tauri/: Cargo.toml  tauri.conf.json
crates/veilpass-tauri/src/: error.rs  lib.rs  main.rs  state.rs
crates/veilpass-tauri/src/commands/: keys.rs  links.rs  mod.rs  nfc.rs  qr.rs  sign.rs  tokens.rs
docker/: .env.example  Dockerfile.api  Dockerfile.docs  Dockerfile.web  README.md  docker-compose.yml
examples/csharp/: Program.cs  README.md  VeilPassClient.cs
examples/flutter/: README.md  pubspec.yaml
examples/flutter/lib/: main.dart
examples/go/: README.md  go.mod  main.go
examples/java/: README.md  VeilPassExample.java  pom.xml
examples/nodejs/: README.md  index.cjs  index.js  package.json
examples/python/: README.md  main.py
examples/react-native/: App.tsx  package.json
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
scripts/: setup.ps1  setup.sh
src/: App.tsx
src/styles/: globals.css
(+26 files in other folders)
