[workspace]
resolver = "2"
members = [
    "crates/veilpass-core",
    "crates/veilpass-cli",
    "crates/veilpass-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Veil Labs <veillabs@atomicmail.io>"]
repository = "https://github.com/veillabs/private-pass"
homepage = "https://veilpass.app"
documentation = "https://docs.rs/veilpass-core"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "7", features = ["v7", "serde"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.2"
rand = "0.8"
